--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,21 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* nav */
+
+.nav {
+  
+}
