Add navbar and header

--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,79 @@ a:hover {
   text-decoration: underline;
 }
 
+ul {
+  list-style-type: none;
+}
+
+.wrapper {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
 /* nav */
 
 .nav {
-  
+  position: fixed;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.2em 0;
+}
+
+.nav a {
+  color: #fff;
+}
+
+.nav-links ul {
+  display: flex;
+  gap: 1.5em;
+}
+
+.nav-logo {
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+
+/* header */
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  color: #fff;
+  background-color: #000;
+}
+
+.header img {
+  height: auto;
+  width: 500px;
+}
+
+.header-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
+
+.header-text h1 {
+  font-size: 2.8rem;
+}
+
+.header-button {
+  margin-top: 1em;
+  padding: 1em 2.5em;
+  background-color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.header-button:hover {
+  opacity: 0.9;
 }
