--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ ul {
   margin: 0 auto;
 }
 
-
 /* nav */
 
 .nav {
@@ -108,10 +107,41 @@ ul {
 /* main */
 
 .section-padding {
-  padding: 2em 6em;
+  padding: 6em 2em;
 }
 
 .section-title {
   text-align: center;
   font-size: 2rem;
+  margin-bottom: 4em;
+}
+
+/* products */
+
+.products-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2em;
+}
+
+.product-icon img {
+  height: auto;
+  width: 72px;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1em;
+  height: 300px;
+  border: 3px solid black;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.product-text {
+  margin-top: 1em;
 }
