--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  height: 200vh;
 }
 
 a {
@@ -25,6 +24,15 @@ ul {
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
+}
+
+.section-padding {
+  padding: 6em 2em;
+}
+
+.section-title {
+  text-align: center;
+  font-size: 2rem;
 }
 
 /* nav */
@@ -105,17 +113,6 @@ ul {
 }
 
 /* main */
-
-.section-padding {
-  padding: 6em 2em;
-}
-
-.section-title {
-  text-align: center;
-  font-size: 2rem;
-  margin-bottom: 4em;
-}
-
 /* products */
 
 .products-content {
@@ -123,6 +120,7 @@ ul {
   justify-content: space-between;
   align-items: center;
   gap: 2em;
+  margin: 6em 0;
 }
 
 .product-icon img {
@@ -136,7 +134,7 @@ ul {
   align-items: center;
   justify-content: center;
   padding: 1em;
-  height: 300px;
+  height: 400px;
   border: 3px solid black;
   border-radius: 5px;
   text-align: center;
@@ -144,4 +142,29 @@ ul {
 
 .product-text {
   margin-top: 1em;
+}
+
+/* section */
+
+.quote-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f8f8f8;
+}
+
+.quote-text {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.quote-text p {
+  font-size: 2rem;
+}
+
+.quote-text span {
+  align-self: flex-end;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
