--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,6 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
 ul {
   list-style-type: none;
 }
@@ -59,6 +51,7 @@ ul {
 
 .nav a {
   color: #fff;
+  text-decoration: none;
 }
 
 .nav-links ul {
@@ -68,6 +61,7 @@ ul {
 
 .nav-logo {
   font-size: 1.6rem;
+  text-decoration: none;
   font-weight: bold;
 }
 
@@ -169,4 +163,29 @@ ul {
   font-weight: bold;
 }
 
-/*  */
+/* cta */
+
+.cta {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #000;
+  color: #fff;
+  border-radius: 5px;
+  padding: 2em 1em;
+}
+
+.cta-button {
+  padding: 0.8em 2em;
+  background: transparent;
+  font-size: 1.1rem;
+  color: #fff;
+  border: 3px solid #fff;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.cta-button:hover {
+  background-color: #fff;
+  color: #000;
+}
