--- a/css/style.css
+++ b/css/style.css
@@ -189,3 +189,14 @@ ul {
   background-color: #fff;
   color: #000;
 }
+
+/* footer */
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2em 1em;
+  color: #fff;
+  background-color: #000;
+}
